# CompressionTool

./: .clang-tidy  CMakeLists.txt  CMakeUserPresets.json  CompressionTool.sln  CompressionTool.vcxproj  CompressionTool.vcxproj.filters  README.md
src/: BitReader.cpp  BitReader.h  BitWriter.cpp  BitWriter.h  CompressionExceptions.h  CompressionTool.cpp  CompressionTool.h  CompressionTool.qrc  CompressionWorker.cpp  CompressionWorker.h  EncodingAlgorithms.cpp  EncodingAlgorithms.h  FileHeader.cpp  FileHeader.h  HuffmanCoding.cpp  HuffmanCoding.h  RLECoding.cpp  RLECoding.h  main.cpp
tests/: compression_tool_test.cpp
